# hello-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: publish.yml
docs/: getting_started.md
src/: main.rs
