[package]
name = "hello"
description = "👋 Hello CLI in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Dat Nguyen <datnguyen.it09@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/datnguye/hello-rs"
repository = "https://github.com/datnguye/hello-rs"
license = "MIT"
license-file = "LICENSE"
keywords = ["hello", "world"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
